# bcwallet

./: .gitignore  Cargo.toml  README.md  params.json  wallet.json
src/: btcclient.rs  lib.rs  localrpc.rs  main.rs  network.rs  params.rs  receiver.rs  restclient.rs  rpcclient.rs  test_helpers.rs  transaction.rs  utils.rs  utxo.rs  utxoset.rs  uxtoset.rs  valued.rs  wallet.rs
src/btc_client/: localrpc.rs  mod.rs
src/input_select_strategy/: min.rs  mod.rs
tests/: integration.rs  sign_transaction.rs
