[package]
name = "bcwallet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitcoin = "0.32.8"
clap = { version = "4.6.0", features = ["derive"] }
secp256k1 = { version = "*", features = ["rand-std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
